--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "try-frourio",
   "version": "1.0.0",
   "scripts": {
+    "lint-dry:tsc": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.18",
+    "typescript": "4.9.4"
   }
 }
