--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "lint-dry:tsc": "tsc --noEmit",
+    "start": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
     "typescript": "4.9.4"
+  },
+  "dependencies": {
+    "tsx": "3.12.2"
   }
 }
