--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "lint-dry:tsc": "tsc --noEmit",
+    "lint-dry": "run-p --continue-on-error 'lint-dry:*'",
     "start": "tsx src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo No test yet."
   },
   "devDependencies": {
     "@types/node": "18.11.18",
+    "npm-run-all": "4.1.5",
     "typescript": "4.9.4"
   },
   "dependencies": {
