chore: add linters

--- a/package.json
+++ b/package.json
@@ -2,14 +2,38 @@
   "name": "try-frourio",
   "version": "1.0.0",
   "scripts": {
+    "eslint-print-config": "eslint --print-config src/index.ts > tmp/eslint-print-config.json",
+    "lint-dry:eslint": "eslint -c .eslintrc.js --max-warnings=0 .",
+    "lint-dry:format": "prettier --check .",
     "lint-dry:tsc": "tsc --noEmit",
-    "lint-dry": "run-p --continue-on-error 'lint-dry:*'",
+    "lint-dry": "run-s --continue-on-error 'lint-dry:*'",
+    "lint:eslint": "eslint -c .eslintrc.js --max-warnings=0 --fix .",
+    "lint:format": "prettier --write .",
+    "lint": "run-s --continue-on-error 'lint:*' lint-dry:tsc",
     "start": "tsx src/index.ts",
     "test": "echo No test yet."
   },
   "devDependencies": {
+    "@types/eslint": "8.4.10",
     "@types/node": "18.11.18",
+    "@types/prettier": "2.7.2",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-interactive": "10.4.0",
+    "eslint-plugin-array-func": "3.1.8",
+    "eslint-plugin-import": "2.27.4",
+    "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-prefer-arrow-functions": "3.1.4",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-sort-destructure-keys": "1.4.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-typescript-sort-keys": "2.1.0",
     "npm-run-all": "4.1.5",
+    "prettier": "2.8.3",
+    "prettier-plugin-organize-imports": "3.2.2",
     "typescript": "4.9.4"
   },
   "dependencies": {
