--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "lint:format": "prettier --write .",
     "lint": "run-s --continue-on-error 'lint:*' lint-dry:tsc",
     "start": "tsx src/index.ts",
-    "test": "echo No test yet."
+    "test-ci": "jest --ci",
+    "test": "jest --watch"
   },
   "devDependencies": {
+    "@jest/types": "29.3.1",
+    "@swc/core": "1.3.26",
+    "@swc/jest": "0.2.24",
     "@types/eslint": "8.4.10",
+    "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
     "@types/prettier": "2.7.2",
     "@typescript-eslint/eslint-plugin": "5.48.1",
@@ -25,12 +30,14 @@
     "eslint-interactive": "10.4.0",
     "eslint-plugin-array-func": "3.1.8",
     "eslint-plugin-import": "2.27.4",
+    "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-n": "15.6.1",
     "eslint-plugin-prefer-arrow-functions": "3.1.4",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "jest": "29.3.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.3",
     "prettier-plugin-organize-imports": "3.2.2",
