--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
-      "@types/node"
+      "@types/node",
+      "@types/jest"
     ] /* Specify type package names to be included without being referenced in a source file. */,
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
@@ -102,5 +103,11 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": [".eslintrc.js", ".prettierrc.js", "**/*.d.ts", "src"]
+  "include": [
+    ".eslintrc.js",
+    ".prettierrc.js",
+    "**/*.d.ts",
+    "jest.config.js",
+    "src"
+  ]
 }
