--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "try-frourio",
   "version": "1.0.0",
   "scripts": {
+    "dev:frourio": "cd src && frourio --watch",
+    "dev:server": "tsx watch src/index.ts",
+    "dev": "run-s generate && run-p dev:*",
     "eslint-print-config": "eslint --print-config src/index.ts > tmp/eslint-print-config.json",
+    "generate:frourio": "cd src && frourio",
+    "generate": "run-p generate:*",
     "lint-dry:eslint": "eslint -c .eslintrc.js --max-warnings=0 .",
     "lint-dry:format": "prettier --check .",
     "lint-dry:tsc": "tsc --noEmit",
@@ -10,9 +15,8 @@
     "lint:eslint": "eslint -c .eslintrc.js --max-warnings=0 --fix .",
     "lint:format": "prettier --write .",
     "lint": "run-s --continue-on-error 'lint:*' lint-dry:tsc",
-    "start": "tsx src/index.ts",
-    "test-ci": "jest --ci",
-    "test": "jest --watch"
+    "test-ci": "npm run generate && jest --ci",
+    "test": "npm run generate && jest --watch"
   },
   "devDependencies": {
     "@jest/types": "29.3.1",
@@ -37,6 +41,7 @@
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "frourio": "0.31.1",
     "jest": "29.3.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.3",
